--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Tennor.io</title>
 </head>
 <body>
-    <div class="home">
-        {{ profile_picture }}
+    <div id="home">
+        {{ message }}
     </div>
     <script src="index.js"></script>
 </body>
