--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tennor Lee</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 <body class="main-content">
@@ -42,7 +43,8 @@
                         </a>
                     </div>
                     <div class="btn-con">
-                        <a href="doc/Lee_Kang_Ning_Resume_reviewed_23_Apr.pdf" class="main-btn" target="_blank">
+                        <a href="doc/Lee_Kang_Ning_Resume_reviewed_23_Apr.pdf" class="main-btn" target="_blank"
+                            download>
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
@@ -68,7 +70,8 @@
                         <strong>.Net Framework</strong> too! Check out my latest projects.
                     </p>
                     <div class="btn-con">
-                        <a href="doc/Lee_Kang_Ning_Resume_reviewed_23_Apr.pdf" class="main-btn" target="_blank">
+                        <a href="doc/Lee_Kang_Ning_Resume_reviewed_23_Apr.pdf" class="main-btn" target="_blank"
+                            download>
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
