--- a/index.html
+++ b/index.html
@@ -526,15 +526,12 @@
                                 <a href="https://github.com/TennorHD" target="_blank" class="link">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <div class="btn-con">
-                                    <a href="https://calendly.com/tennorlee/30min" target="_blank" class="main-btn">
-                                        <span class="btn-text">Talk with me!</span>
-                                        <span class="btn-icon"><i class="fas fa-calendar-day"></i></span>
-                                    </a>
-                                </div>
-                                <!-- <a href="#" target="_blank">
-                                    <i class="fab fa-youtube"></i>
-                                </a> -->
+                            </div>
+                            <div class="btn-con">
+                                <a href="https://calendly.com/tennorlee/30min" target="_blank" class="main-btn">
+                                    <span class="btn-text">Calendly</span>
+                                    <span class="btn-icon"><i class="fas fa-calendar-day"></i></span>
+                                </a>
                             </div>
                         </div>
                     </div>
