--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         programmed with C. <br />
                         I usually create web components with <strong>React.JS</strong>
                         or <strong>Node.JS</strong>. I do some windows application with
-                        <strong>.Net Framework</strong> too! Check out my latest projects.
+                        <strong>.Net Framework</strong> too!
                     </p>
                     <div class="btn-con">
                         <a href="doc/Lee_Kang_Ning_Resume_reviewed_23_Apr.pdf" class="main-btn" target="_blank"
@@ -191,7 +191,7 @@
                     <div class="tl-icon">
                         <i class="fas fa-link"></i>
                     </div>
-                    <p class="tl-duration">2016 - 2017</p>
+                    <p class="tl-duration">Feb 2022 - Present</p>
                     <h5>Blockchain Developer<span> - Freelance </span></h5>
                     <p>
                         Builds smart contracts with <strong>Solitidy</strong> and <strong>Web3.JS</strong> to interact
